--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -79,8 +79,8 @@
                 android:id="@+id/edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="8dp"
-                app:srcCompat="@android:drawable/ic_menu_edit" />
+                android:paddingTop="12dp"
+                app:srcCompat="@drawable/ic_edit_white_24dp" />
 
         </LinearLayout>
 
@@ -116,7 +116,7 @@
                         app:gaugeStartAngle="135"
                         app:gaugeStartValue="0"
                         app:gaugeStrokeCap="ROUND"
-                        app:gaugeStrokeColor="@color/cardview_light_background"
+                        app:gaugeStrokeColor="@color/colorBackground"
                         app:gaugeStrokeWidth="5dp"
                         app:gaugeSweepAngle="270" />
 
