--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -14,6 +14,11 @@
         android:title="Leaderboard"
         app:showAsAction="never" />
     <item
+        android:id="@+id/guidlines"
+        android:orderInCategory="100"
+        android:title="Guidelines"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/aboutte"
         android:orderInCategory="100"
         android:title="About TechEagle"
