--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -104,6 +104,28 @@
                 android:inputType="textPersonName"
                 android:textSize="18sp" />
 
+            <EditText
+                android:id="@+id/city"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:ems="12"
+                android:gravity="center_horizontal"
+                android:hint="City"
+                android:inputType="textPersonName"
+                android:textSize="18sp" />
+
+            <EditText
+                android:id="@+id/interests"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:ems="12"
+                android:gravity="center_horizontal"
+                android:hint="Interests"
+                android:inputType="textPersonName"
+                android:textSize="18sp" />
+
             <Button
                 android:id="@+id/update"
                 android:layout_width="wrap_content"
